--- a/entreprise.css
+++ b/entreprise.css
@@ -198,7 +198,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('./img/_YVR7268_DxO.jpg');
+    background-image: url('./img/army.jpg');
     background-size: cover;
     filter: brightness(0.5);
     z-index: -1; 
